Våra fastigheter klar för mobil, fortsätter med ipad

--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -13,7 +13,7 @@
 
             <div class=" col-md-8 col-sm-6 divfastigheter2" >
                 <div class="col-sm-4 col-md-4 divleft2" >
-                    <p>Visa fastigheter för:</p>
+                    <label>Visa fastigheter för</label>
                     <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
                             Alla områden
@@ -24,17 +24,17 @@
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Senior 55+</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Seniorboende 55+</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-sm-4 col-md-4">
-                    <p>Sök på adress</p>
-
-
-                    <div id="imaginary_container" style="width:200px;">
+                <div class="col-sm-4 col-md-6">
+                  
+                  
+                        <label>Sök på adress</label>
                         <div class="input-group stylish-input-group">
+                           
                             <input type="text" class="form-control" placeholder="Sök">
                             <span class="input-group-addon">
                                 <button type="submit">
@@ -42,18 +42,15 @@
                                 </button>
                             </span>
                         </div>
-                    </div>
+                  
 
 
                 </div>
 
-                <br />
-                <br />
-                <br />
-                <legend style="color:#e93523">3 Fastigheter</legend>
+                <legend class="rubrik-fastigheter">3 Fastigheter</legend>
                 <div class="row divfastigheter3 objekt">
 
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-5 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt=""></center>
                     </div>
                     <div class="col-md-5 col-sm-5">
@@ -64,12 +61,13 @@
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
-                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+                        
 
                     </div>
 
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-2 col-sm-3" >
                         <br />
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/gvNVpwmYs5n" target="_blank"> Hitta hit</a>
                         @*<div class="google-maps">
@@ -80,7 +78,7 @@
 
                 <hr size="1" color="#996633">
                 <div class="row objekt">
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-5 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
                     </div>
                     <div class="col-md-5 col-sm-5">
@@ -89,13 +87,18 @@
                             <b>Område:</b> Örebro Centralt <br />
                             <b>Adress:</b> Kyrkogatan 20 <br />
                             <b>Antal lägenheter i fastigheten:</b> 15<br />
+                            <b>Seniorboende 55+</b><br />
+                            <a class="link" href="~/Home/seriorboende">Läs mer om seniorboende 55+ >></a>
                             <br />
-                            0 Lediga lägenheter i fastigheten<br />
+                            <br />
+                            0 Lediga lägenheter i fastigheten
+                            <br />
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
-                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+                       
                     </div>
 
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-2 col-sm-3">
                         <br />
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/boNdvNsyb1R2" target="_blank"> Hitta hit</a>
                         @*<div class="google-maps">
@@ -107,7 +110,7 @@
 
                 <hr size="1" color="#996633">
                 <div class="row objekt">
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-5 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
                     </div>
                     <div class="col-md-5 col-sm-5">
@@ -118,11 +121,12 @@
                             <b>Antal lägenheter i fastigheten:</b> 40<br />
                             <br />
                             0 Lediga lägenheter i fastigheten<br />
+                            <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                         </p>
-                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+                        
                     </div>
 
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-2 col-sm-3">
                         <br />
                         <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
                         @*<div class="google-maps">
