--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1306,11 +1306,27 @@ p {
   line-height: 1.4;
 }
 /*Här är för mobilskärm*/
+
+p.meromfastigheter{
+    font-size: 14px;
+text-align:center;
+background-color: #dddddd;
+padding-bottom:15px;
+padding-top:15px;
+font-weight: bold;
+
+}
+
+legend.rubrik-fastigheter{
+    margin-top:30px;
+    color:#e93523
+}
+
 div.divfastigheter{
-    width:230px;
-    height: 300px;
-    margin-top: 112px;
-    margin-left: 30px;
+ 
+    
+    margin-top: 20px;
+    
     padding: 0px;
     /*margin-right:30px;*/
     /*padding-right: 0px;*/
@@ -1323,8 +1339,8 @@ div.divfastigheter{
 }
 
 div.divfastigheter2{
-    margin-top: 20px;
-    margin-left: 50px;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 div.divfastigheter3{
@@ -2182,6 +2198,26 @@ h6,
   p{
     font-size:12px;
 }
+  div.divleft2{
+    margin-left: 100px;
+}
+
+  div.divfastigheter{
+    width:230px;
+    height: 300px;
+    margin-top: 112px;
+    margin-left: 30px;
+    padding: 0px;
+    /*margin-right:30px;*/
+    /*padding-right: 0px;*/
+    border: 1px solid #ccc;
+    box-shadow: 0px 5px 10px #333;
+    /*border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;*/
+    
+    background-color: white;
+}
+
   div.divfastigheter2{
     margin-top: 20px;
     margin-left: 0px;
@@ -7436,9 +7472,6 @@ a.menylink:hover{
     color: #c8574c;
 }
 
-div.divleft2{
-    margin-left: 150px;
-}
 
 a.link{
     color:#e95123;
@@ -7517,14 +7550,6 @@ button.btnleft{
     background-color: #ddd;
 }
 
-p.meromfastigheter{
-text-align:center;
-background-color: #dddddd;
-padding-bottom:15px;
-padding-top:15px;
-font-weight: bold;
- /*box-shadow: 0px 0px 20px #777 inset;*/
-}
 
 div.link1{
     margin-left:10px;
