--- a/design/design/Views/Home/InfoObjekt.cshtml
+++ b/design/design/Views/Home/InfoObjekt.cshtml
@@ -9,8 +9,8 @@
     <a class="link" href="~/Home/LedigaObjekt"><< Lediga objekt</a>
     <center><h1>Rynningegatan 27</h1></center>
     <br />
-    <div class=" row information info1">
-        <div class="col-md-2">
+    <div class="row info1">
+        <div class="col-md-2 col-sm-4">
             <div>
                 <p>
                     <b>Område:</b> Örebro Norr <br />
@@ -26,17 +26,17 @@
             </div>
             
         </div>
-        <div class="col-md-5 ">
+        <div class="col-md-5 col-sm-6">
             
             <div>
                 
                 <p><span style="font-size:x-large;">Övrig information</span><br /> Standard: Parkettgolv, kaklat badrum, handdukstork, tvättmaskin, torktumlare, diskmaskin, mikrovågsugn, balkong. Hiss finns.Inflytt 1 juli 2017. För intresseanmälan - se här nedan.</p>
-                <br />
-                <br />
+              
              
             </div>
         </div> 
-        <div class=" col-md-5">
+        <div class=" col-md-5 col-sm-12">
+         
             <div class="mainbody">
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
@@ -82,19 +82,18 @@
     </div>
 
     <br />
-    <div class=" row information">
+    <div class="row informationobjekt">
        
-        <div class="col-md-3 ">
+        <div class="col-md-4 intressebtn">
+            <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-lg intresse2">Intresseanmälan</a>
+        </div>
+        <div class="col-md-4 ">
             <p><span style="font-size:large;">Örebro</span><br /> <span style="font-size:small;">Örebro är befolkningsmässigt landets sjunde största kommun. Här bor cirka 137 000 personer på en yta av 1 380,1 km2 (landareal). I kommunen finns invånare från cirka 150 olika länder. Själva staden Örebro är drygt 700 år gammal. Slottet började byggas redan på 1200-talet. I dag finns bland annat restaurang, olika konferenslokaler och landshövdingens bostad i Örebro slott.</span></p>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-4 ">
             <p><span style="font-size:large;">Norr</span><br /> <span style="font-size:small;">Norr är en stadsdel i Örebro som ligger norr om centrum. Stadsdelen sträcker sig från Norra Grev Rosengatan i söder, till Hagaby och vattentornet Svampen i norr. Det gränsar till Rynninge, Ringstorp och Pettersberg i öster, och till järnvägen Örebro-Frövi i väster.</span></p>
         </div>
-        <div class="col-md-6">
-            <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-lg intresse2">Intresseanmälan</a>
-            
-            
-        </div>
+     
     </div>
 
 
