--- a/design/design/Views/Home/Intresseanmalan2.cshtml
+++ b/design/design/Views/Home/Intresseanmalan2.cshtml
@@ -7,7 +7,7 @@
 <div class="maincontainer1">
 
     <div class="row ontop">
-        <div class="col-md-5 leftdiv">
+        <div class="col-md-5 col-sm-5 leftdiv-intresse2" >
             <div class="form-group">
                 <div class="falt">
                     <label>Namn: *</label>
@@ -209,15 +209,15 @@
 
                 <br />
                 <br />
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                     <a href="~/Home/LedigaObjekt" type="submit" class="btn btn-danger">Avbryt</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 rightdiv information">
+        <div class="col-md-5 col-sm-5 rightdiv information">
             <p style="font-size:x-large;"><b>Intresseanmälan gäller endast för:</b></p>
             <h4>
                 <b>Adress:</b> Rynningegatan 27 <br />
@@ -226,6 +226,29 @@
 
                 <br />
             </h4>
+        </div>
+        <div class="col-md-5 col-sm-5 col-lg-5 rightdiv information right-last">
+            <h3>Personuppgifter</h3>
+            <p>
+
+                De personuppgifter som du lämnar i ansökan/intresseanmälan kommer att behandlas
+                i den utsträckning som behövs för att kunna bedömma av om du kan godtas som hyresgäst.
+                Därför behövs uppgifter från personer som kan uttala sig om dig. Genom att lämna uppgifter
+                om referenspersoner medger du att uppgifter får inhämtas från dessa personer. Uppgifter kan
+                också komma att inhämtas från kreditupplysningsinstitut och myndigheter.
+                <br />
+                <br />
+                Uppgifterna kommer endast att behandlas inom bostadsföretaget. Du har rätt att gratis en gång om året
+                få besked om vilka personuppgifter om dig som behandlas och hur de behandlas. Du kan också begära
+                rättelse av de personuppgifter som behandlas.
+                <br />
+                <br />
+                Personuppgifterna om dig kommer bara att behandlas under den tid som din ansökan/intresseanmälan är aktuell.
+                Detta innebär att samtliga personuppgifter kommer att gallras när du har meddelat att du inte längre
+                önskar kvarstå som bostadssökande. Detta gäller också om din ansökan/intresseanmälan om bostad avslås.
+                Om skälet till att ansökan/intresseanmälan avslagits är att du inte kunnat godtas på grund av misskötsamhet
+                i ett tidigare boende, bevaras dock uppgifterna under tre månader efter avslagsbeslut.
+            </p>
         </div>
     </div>
 </div>
