--- a/design/design/Views/Home/Intresseanmalan2.cshtml
+++ b/design/design/Views/Home/Intresseanmalan2.cshtml
@@ -5,7 +5,16 @@
 
 <h2 class="sidrubrik">Intresseanmälan</h2>
 <div class="maincontainer1">
+    <div class="col-xs-12 information mobil-info">
+        <p style="font-size:x-large;"><b>Intresseanmälan gäller endast för:</b></p>
+        <h4>
+            <b>Adress:</b> Rynningegatan 27 <br />
+            <b>Antal rum:</b> 3
+            <br /><b>Hyra:</b> 7000 kr/månad
 
+            <br />
+        </h4>
+    </div>
     <div class="row ontop">
         <div class="col-md-5 col-sm-5 leftdiv-intresse2" >
             <div class="form-group">
@@ -209,15 +218,15 @@
 
                 <br />
                 <br />
-                <div class="col-md-4 col-sm-6">
+                <div class="col-xs-5 col-md-4 col-sm-6">
                     <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
                 </div>
-                <div class="col-md-4 col-sm-6">
+                <div class="col-xs-5 col-md-4 col-sm-6">
                     <a href="~/Home/LedigaObjekt" type="submit" class="btn btn-danger">Avbryt</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-5 col-sm-5 rightdiv information">
+        <div class="col-md-5 col-sm-5 rightdiv information tablet-info">
             <p style="font-size:x-large;"><b>Intresseanmälan gäller endast för:</b></p>
             <h4>
                 <b>Adress:</b> Rynningegatan 27 <br />
@@ -228,6 +237,8 @@
             </h4>
         </div>
         <div class="col-md-5 col-sm-5 col-lg-5 rightdiv information right-last">
+            <br />
+
             <h3>Personuppgifter</h3>
             <p>
 
