--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -8,19 +8,19 @@
 <div class="maincontainer1">
  
     <div class="row ontop">
-        <div class="col-sm-4 col-md-4 col-lg-4">
+        <div class="col-sm-4 col-md-4">
             <a class="link" href="~/Home/Varafastigheter"><< Tillbaka till våra fastigheter</a>
         </div>
     </div>
     <br />
     <br />
         <div class="row">
-            <div class="col-md-6 col-sm-6 col-lg-6">     
+            <div class="col-md-6 col-sm-6">     
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 col-lg-4">
+                    <div class="col-md-4 col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt="erikrosenbergsväg"></center>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
                         <p>
                             <b>Område:</b> Örebro Almby <br />
                             <b>Adress:</b> Erik RosenbergsVäg 1 <br />
@@ -37,10 +37,10 @@
                 <br />
                 <hr size="2" color="black">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4 col-xs-4">
                         <center><img class="img-responsive" src="~/Content/Images/salsmästargatan.PNG" alt="salsmästaregatan"></center>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
                         <p>
                             <b>Område:</b> Örebro Öster <br />
                             <b>Adress:</b> Salsmästaregatan 24-52 <br />
@@ -57,10 +57,10 @@
                 <br />
                 <hr size="2" color="black">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-4 col-xs-4">
                         <center><img class="img-responsive" src="~/Content/Images/tärnvägen.PNG" alt="tärnvägen"></center>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
                         <p>
                             <b>Område:</b> Örebro Almby <br />
                             <b>Adress:</b> Tärnvägen 12-20 <br />
@@ -76,10 +76,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 col-sm-1 col-xs-1">
 
             </div>
-           <div class="col-md-4">
+           <div class="col-md-4 col-sm-4 col-xs-4">
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
@@ -112,15 +112,15 @@
                         </a>
                     </div>
 
-               <div class="col-sm-8">
+               <div class="col-sm-8 col-md-8 col-xs-8">
                    <h3>Bra länkar för dig som student</h3>
-                   <h5>
-                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys - Matbutik</a><br />
-                       <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
-                       <a href="http://www.lanstrafiken.se/Orebro/">Länstrafiken - Busstidtabell</a><br />
-                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB - Lågprisvaruhus</a><br />
-                       <a href="https://www.sj.se/">SJ</a>
-                   </h5>
+                   <h4>
+                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a> Matvarubutik<br />
+                       <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a> Bibliotek<br />
+                       <a href="http://www.lanstrafiken.se/Orebro/">Länstrafiken</a> Busstidtabell<br />
+                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB</a> Lågprisvaruhus<br />
+                       <a href="https://www.sj.se/">SJ</a> Bokning av tåg
+                   </h4>
 
                </div>
 
