--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">     
                 <div class="row">
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-4 col-sm-4 col-xs-6">
                         <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt="erikrosenbergsväg"></center>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-6">
