--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -120,7 +120,7 @@
                    <br />
                    <br />
                    <h3>Bra länkar för dig som student</h3>
-                   <h4>
+                   <h4 class="radavstånd">
                        <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
                        <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
                        <a href="http://www.lanstrafiken.se/Orebro/">Länstrafiken</a><br />
