--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -43,7 +43,7 @@
 
             <legend style="color:#e93523">Vi som jobbar på kontoret</legend>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Stieg.jpg" alt="Stieg Ekström"></center>
                     <h4>Stieg Ekström</h4>
                     <p>
@@ -51,7 +51,7 @@
                         <a href="mailto:stieg@je-bygg.se" target="_blank">stieg@je-bygg.se</a>
                     </p>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt="Anna Ekström"></center>
                     <h4>Anna Ekström</h4>
                     <p>
@@ -61,7 +61,7 @@
                         <a href="mailto:anna@je-bygg.se" target="_blank">anna@je-bygg.se</a>
 </p>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt="Mari Ekström Thor"></center>
                     <h4>Mari Ekström Thor</h4>
                     <p>
@@ -70,7 +70,7 @@
                         <a href="mailto:marie@je-bygg.se" target="_blank">marie@je-bygg.se</a>
 </p>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt="Lena Ekström Tungfelt"></center>
                     <h4>Lena Ekström Tungfelt</h4>
                     <p>
@@ -82,7 +82,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt="Annette Andersson"></center>
                     <h4>Annette Andersson</h4>
                     <p>
@@ -93,7 +93,7 @@
 </p>
                     <a class="link" href="~/Home/Intresseanmalan">Intresseanmälan >></a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/RunellIrene.jpg" alt="Irene Runell"></center>
                     <h4>Irene Runell</h4>
                     <p>
@@ -102,7 +102,7 @@
                         019 - 16 43 74
                     </p>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/Ottosson-Carina.jpg" alt="Carina Ottosson"></center>
                     <h4>Carina Ottosson</h4>
                     <p>
@@ -112,7 +112,7 @@
                         070 - 410 40 11
                     </p>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-7">
                     <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Adis"></center>
                     <h4>Adis</h4>
                     <p>
@@ -126,64 +126,64 @@
     <br />
     <legend style ="color:#e93523">Vi som fixar och underhåller</legend>
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/Johansson-Patrik.jpg" alt="Patrik Johansson"></center>
             <h4>Patrik Johansson</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/StrandbergMikael.jpg" alt="Mikael Strandberg"></center>
             <h4>Mikael Strandberg</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/BergTony.jpg" alt="Tony Berg"></center>
             <h4>Tony Berg</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/WibergBenny.jpg" alt="Benny Wiberg"></center>
             <h4>Benny Wiberg</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/ErikssonPeder.jpg" alt="Peder Eriksson"></center>
             <h4>Peder Eriksson</h4>
         </div>
-        <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/Gustafsson-Jan-Ake.jpg" alt="Jan Åke Gustavsson" /> /></center>
+        <div class="col-sm-3 col-xs-7">
+            <center><img class="img-responsive" src="~/Content/Images/Gustafsson-Jan-Ake.jpg" alt="Jan Åke Gustavsson" /></center>
             <h4>Jan-Åke Gustavsson</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/LarsenPeter.jpg" alt="Peter Larsen"></center>
             <h4>Peter Larsen</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/RunellHans.jpg" alt="Hans Rünell"></center>
             <h4>Hans Rünell</h4>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/Akerstrandorjan.jpg" alt="Örjan Åkerstrand"></center>
             <h4>Örjan Åkerstrand</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Richard Gustafsosn"></center>
             <h4>Richard Gustafsson</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/StenArnsheml.png" alt="Sten Arnshelm"></center>
             <h4>Sten Arnsheml</h4>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Mikael Sabri"></center>
             <h4>Mikael Sabri</h4>
         </div>
 
     </div>
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-3 col-xs-7">
             <center><img class="img-responsive" src="~/Content/Images/anonym-man.jpg" alt="Britt-Marie Jansson"></center>
             <h4>Britt-Marie Jansson</h4>
         </div>
