--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1307,6 +1307,15 @@ p {
 }
 /*Här är för mobilskärm*/
 
+      div.leftdiv1{
+    margin-left: 1px;
+   /* margin-right: 5%;
+    padding-left: 20px;*/
+    border: 1px solid #b4b4b4;
+    background-color: #f5f5f5;
+    
+}
+
   div.tablet-info{
         display:none;
     }
@@ -2216,8 +2225,17 @@ h6,
   p{
     font-size:12px;
 }
+        div.leftdiv1{
+    margin-left: 5%;
+   /* margin-right: 5%;
+    padding-left: 20px;*/
+    
+}
     div.leftdiv-intresse2{
       margin-left: 4%;
+    background-color: #f5f5f5;
+      border: 1px solid #b4b4b4;
+      padding-bottom:10px;
   }
     div.tablet-info{
         display:block;
@@ -2573,6 +2591,11 @@ button.flikbutton{
   }
   
   /*Här är för desktop*/
+        div.leftdiv1{
+    margin-left: 7%;
+
+    
+}
     div.logga{
         display: none;
     }
@@ -7398,12 +7421,7 @@ div.checkbox1{
     padding-left: 20px;
     /*border: 1px solid grey;*/
 }
-      div.leftdiv1{
-    margin-left: 7%;
-   /* margin-right: 5%;
-    padding-left: 20px;*/
-    /*border: 1px solid grey;*/
-}
+
 
 button.btnleft{
     background-color: #ddd;
