--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -13,49 +13,58 @@
                 <div class="row">
                     <div class="col-md-2">
                     </div>
-                    <div class="omekström col-md-8 col-sm-8 col-lg-8">
-                        <br />
-                        Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
-                        <br />
-                        <br />
-                        <br />
-                        <br />
+                    <div class="omekström col-md-8 col-sm-12 col-lg-8">
+                        <h3 style="color: #e93523">John Ekströms Bygg</h3>
+                        
+                       <p> Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
+                     </p>
+                           <br />
                     </div>
                 </div>
-               
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-sm-3 omoss">
-                            <h4 style="color: #e93523">Varför ska man hyra av oss?</h4>
-                            <p>Vi har ägande, skötsel och drift i egen regi.
-<br />
-                        Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+             
+                <div class="row ">
+                   
+
+                    <div class=" col-md-2"></div>
+                    <div class="col-md-10">
+                        <h3 style="color: #e93523">Företagets nyckelord</h3>
+                        <p>Byggmästarkvalitét</p>
+                    </div>
+                    <div class=" col-md-2"></div>
+                        <div class="col-md-10">
+                            <h3 style="color: #e93523">Varför ska man hyra av oss?</h3>
+                            <p>
+                                Vi har ägande, skötsel och drift i egen regi.
+                                <br />
+                                Vi har lång erfarenhet av hyresfastigheter och hyresgäster.
+                            </p>
                         </div>
-                        <div class="col-sm-3 omoss">
-                            <h4 style="color: #e93523">Företagets nyckelord</h4>
-                            <p>Byggmästarkvalitét</p>
-                        </div>
-                        <div class="col-sm-3 omoss">
-                            <h4 style="color: #e93523">Våra partners</h4>
+
+                    <div class=" col-md-2"></div>
+                        <div class="col-md-10">
+                            <h3 style="color: #e93523">Våra partners</h3>
                             <p>Wärna Städ och GMS i Örebro AB</p>
                         </div>
-                        <div class="col-sm-3 omoss">
-                            <h4 style="color: #e93523">EP-Fastigheter</h4>
+                    <div class=" col-md-2"></div>
+                        <div class="omoss col-md-10">
+                            <h3 style="color: #e93523">EP-Fastigheter</h3>
                             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
                             <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
                         </div>
-                        <br />
-                    </div>
+                        
+                   
                 </div>
+                
                 <div class="row">
                     <hr size="1" color="#996633">
                     <div class="col-md-1">
 
                     </div>
-                    <div class="col-md-2">
+                    
+                    <div class="col-md-2 col-sm-4 col-xs-4">
                         <img class="img-responsive" src="~/Content/Images/logo-black-text-height-240px-2x.png" alt="cityörebro">
                     </div>
-                    <div class="omekström col-md-8 col-sm-8 col-lg-8">
+                    <div class="omekström col-md-8 col-sm-8 col-lg-8 col-xs-12">
                         <br />
                         <br />
                         <p>År 2016 fick vi utmärkelsen årets fastighetsägare av City Örebro med följande motivering. </p>
