--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -127,7 +127,7 @@
 
                     <div class="col-md-2 col-sm-9">
                         <br />
-                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/6q7cYjMi3Qy" target="_blank"> Hitta hit</a>
                         @*<div class="google-maps">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>*@
