--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -179,7 +179,7 @@
                     <br /><b>Yta:</b> 83 kvm
                     <br /><b>Våning:</b> 3
                     <br /><b>Övrigt:</b> Balkong
-                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/3doCY1fStYy" target="_blank"> Hitta hit</a>
                 </p>
 
            
@@ -208,7 +208,7 @@
                     <br /><b>Yta:</b> 90 kvm
                     <br /><b>Våning:</b> 2 
                     <br /><b>Övrigt:</b> Hiss
-                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/yBSTFo9HWPq" target="_blank"> Hitta hit</a>
                 </p>
         
                
@@ -237,7 +237,7 @@
                     <br /><b>Yta:</b> 30 kvm
                     <br /><b>Våning:</b> 2
                     <br /><b>Övrigt:</b> Hiss
-                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/TfSE9wonsQn" target="_blank"> Hitta hit</a>
                 </p>
            
                
